--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,10 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es5",
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "src"
