--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "format": "prettier --write",
-    "lint": "tslint -c tslint.json src/**/*.{ts,tsx} --fix --format verbose",
+    "lint:scss": "stylelint src/**/*.scss",
+    "lint:ts": "tslint -c tslint.json src/**/*.{ts,tsx} --fix --format verbose",
     "test": "node scripts/test.js"
   },
   "husky": {
@@ -108,8 +109,13 @@
     }
   },
   "lint-staged": {
+    "*.scss": [
+      "yarn lint:scss"
+    ],
     "*.{ts,tsx}": [
-      "yarn lint",
+      "yarn lint:ts"
+    ],
+    "*": [
       "yarn format"
     ]
   },
