--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,7 @@
   ],
   "rules": {
     "at-rule-no-unknown": null,
+    "no-descending-specificity": null,
     "number-leading-zero": "never",
     "order/order": [
       "declarations",
