--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
-    "uuid": "^7.0.3"
+    "uuid": "^8.0.0",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -34,6 +36,8 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-form": "^8.2.3",
+    "@types/uuid": "^7.0.3",
+    "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.1.0",
