--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
+    "reselect": "^4.0.0",
     "uuid": "^8.0.0",
     "yup": "^0.28.5"
   },
@@ -45,6 +46,7 @@
     "@types/react-transition-group": "^4.2.4",
     "@types/recompose": "^0.30.7",
     "@types/redux-form": "^8.2.3",
+    "@types/reselect": "^2.2.0",
     "@types/uuid": "^7.0.3",
     "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
