--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -41,6 +42,7 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
