--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "paths": {
       "@global": ["src/types/global.d.ts"],
+      "@routes": ["routes.ts"],
 
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
