Added Main Companies container.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,13 @@
     "paths": {
       "@global": ["src/types/global.d.ts"],
       "@routes": ["routes.ts"],
+      "@store": ["store/index.ts"],
 
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@containers/*": ["containers/*"],
+      "@interfaces/*": ["interfaces/*"],
       "@graphql/*": ["graphql/*"],
-      "@store/*": ["store/*"],
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"],
       "@views/*": ["views/*"]
