Added Tags view.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-table": "^7.2.2",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
@@ -45,6 +46,7 @@
     "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-table": "^7.0.19",
     "@types/react-transition-group": "^4.2.4",
     "@types/recompose": "^0.30.7",
     "@types/redux-form": "^8.2.3",
