--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 @fortawesome:registry=https://npm.fontawesome.com/
 //npm.fontawesome.com/:_authToken=0B50941C-7F8A-41CF-96A5-43FD6E8F07AB
+
+@fleetly.registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=7911ffaa271c1d7edb0d5857c4d6370b5ff0b11c
