--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fleetly/common": "^0.0.57",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/react-portal": "^4.0.2",
     "apollo-boost": "^0.4.7",
@@ -32,6 +33,13 @@
   "devDependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@nestjs/common": "^7.3.1",
+    "@nestjs/core": "^7.3.1",
+    "@nestjs/microservices": "^7.3.1",
+    "@nestjs/mongoose": "^7.0.1",
+    "@nestjs/platform-express": "^7.3.1",
+    "@nestjs/testing": "^7.3.1",
+    "@nestjs/websockets": "^7.3.1",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -55,6 +63,7 @@
     "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "amqp-connection-manager": "^3.2.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
