--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "paths": {
       "@global": ["src/types/global.d.ts"],
+      "@constants": ["constants/index.ts"],
       "@routes": ["routes.ts"],
       "@store": ["store/index.ts"],
 
