--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
+    "omit-deep": "^0.3.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-app-polyfill": "^1.0.6",
