--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.1.0",
     "react-table": "^7.2.2",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
@@ -54,6 +55,7 @@
     "@types/react-helmet": "^6.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-select": "^3.0.21",
     "@types/react-table": "^7.0.19",
     "@types/react-transition-group": "^4.2.4",
     "@types/recompose": "^0.30.7",
