Added css modules config.

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "stylelint": "^13.3.3",
+    "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
