--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,14 @@
 {
-  "extends": ["stylelint-config-prettier", "stylelint-config-standard"],
+  "extends": [
+    "stylelint-config-prettier",
+    "stylelint-config-standard",
+    "stylelint-config-css-modules"
+  ],
   "plugins": ["stylelint-order", "stylelint-prettier", "stylelint-scss"],
   "rules": {
     "at-rule-no-unknown": null,
     "no-descending-specificity": null,
-    "number-leading-zero": "never",
+    "number-leading-zero": null,
     "order/order": [
       "declarations",
       {
@@ -36,6 +40,7 @@
       }
     ],
     "scss/at-rule-no-unknown": true,
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "value-keyword-case": null
   }
 }
