--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fleetly/common": "^0.0.82",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/react-portal": "^4.0.2",
     "apollo-boost": "^0.4.7",
@@ -11,6 +12,7 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
+    "moment": "^2.29.1",
     "omit-deep": "^0.3.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
@@ -34,7 +36,6 @@
   "devDependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@fleetly/common": "^0.0.77",
     "@nestjs/common": "^7.3.1",
     "@nestjs/core": "^7.3.1",
     "@nestjs/microservices": "^7.3.1",
