--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.0.3",
     "@fleetly/common": "^0.0.82",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/react-portal": "^4.0.2",
-    "apollo-boost": "^0.4.7",
+    "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "classnames": "^2.2.6",
     "graphql": "^15.0.0",
