--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fleetly/common": "^0.0.82",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/react-portal": "^4.0.2",
+    "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "classnames": "^2.2.6",
