--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "start:https": "set HTTPS=true&&yarn start",
     "build": "node scripts/build.js",
     "format": "prettier --write",
     "lint:scss": "stylelint --fix src/**/*.scss",
