--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fleetly/chat": "^0.2.3",
     "@fleetly/common": "^0.0.82",
     "@fortawesome/fontawesome-pro": "^5.13.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-portal": "^4.0.2",
     "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
@@ -23,6 +24,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
