--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@fleetly/chat": "^0.2.3",
     "@fleetly/common": "^0.0.82",
     "@fortawesome/fontawesome-pro": "^5.13.0",
-    "@types/react-infinite-scroller": "^1.2.1",
-    "@types/react-portal": "^4.0.2",
     "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
@@ -24,7 +22,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-infinite-scroller": "^1.2.4",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -60,6 +58,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^6.0.0",
+    "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-select": "^3.0.21",
