--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "classnames": "^2.2.6",
+    "emoji-picker-react": "^3.4.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
