--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
     "react-table": "^7.2.2",
+    "react-textarea-autosize": "^8.3.1",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
