--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fleetly/chat": "^0.2.3",
     "@fleetly/common": "^0.4.2",
     "@fortawesome/fontawesome-pro": "^5.13.0",
+    "@types/insert-text-at-cursor": "^0.3.0",
     "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
@@ -15,6 +16,7 @@
     "emoji-picker-react": "^3.4.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "insert-text-at-cursor": "^0.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.29.1",
     "omit-deep": "^0.3.0",
