--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-flow-renderer": "^9.4.2",
     "react-helmet": "^6.0.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-portal": "^4.2.1",
