Connected flow to API.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fingerprintjs/fingerprintjs": "^3.0.3",
     "@fleetly/chat": "^0.2.3",
     "@fleetly/common": "^0.4.2",
+    "@fleetly/flow": "^0.3.1",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/insert-text-at-cursor": "^0.3.0",
     "animate.css": "^4.1.1",
