Refactored text content element.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "classnames": "^2.2.6",
     "emoji-picker-react": "^3.4.2",
+    "final-form": "^4.20.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "insert-text-at-cursor": "^0.3.0",
@@ -26,6 +27,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.4.2",
     "react-helmet": "^6.0.0",
     "react-infinite-scroll-component": "^6.0.0",
