--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
+    "chart.js": "^3.3.2",
     "classnames": "^2.2.6",
     "emoji-picker-react": "^3.4.2",
     "final-form": "^4.20.2",
@@ -25,6 +26,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-app-polyfill": "^1.0.6",
+    "react-chartjs-2": "^3.0.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.3",
