--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-infinite-scroll-component": "^6.0.0",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
     "react-table": "^7.2.2",
@@ -74,6 +75,7 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.7",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-select": "^3.0.21",
     "@types/react-table": "^7.0.19",
