Connected stats to API.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fleetly/common": "^0.4.2",
     "@fleetly/core": "^0.2.6",
     "@fleetly/flow": "^0.5.1",
+    "@fleetly/provider": "^0.3.5",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/insert-text-at-cursor": "^0.3.0",
     "animate.css": "^4.1.1",
