Refactored emoji picker.

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@fleetly/flow": "^0.5.1",
     "@fleetly/provider": "^0.3.7",
     "@fortawesome/fontawesome-pro": "^5.13.0",
+    "@types/emoji-mart": "^3.0.5",
     "@types/insert-text-at-cursor": "^0.3.0",
     "animate.css": "^4.1.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "chart.js": "^3.3.2",
     "classnames": "^2.2.6",
-    "emoji-picker-react": "^3.4.2",
+    "emoji-mart": "^3.0.1",
     "final-form": "^4.20.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
