--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/emoji-mart": "^3.0.5",
     "@types/insert-text-at-cursor": "^0.3.0",
     "animate.css": "^4.1.1",
+    "animated-number-react": "^0.1.2",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "chart.js": "^3.3.2",
