Refactored profile security.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,20 +16,16 @@
       "@global": ["src/types/global.d.ts"],
       "@routes": ["routes.ts"],
 
-      "@app": ["app/*"],
-      "@core": ["core/*"],
-      "@landing/*": ["landing/*"],
-
-      "@assets/*": ["core/assets/*"],
-      "@components/*": ["core/components/*"],
-      "@constants": ["core/constants/index.ts"],
-      "@containers/*": ["core/containers/*"],
-      "@interfaces/*": ["core/interfaces/*"],
-      "@graphql/*": ["core/graphql/*"],
-      "@hooks/*": ["core/hooks/*"],
-      "@store": ["core/store/index.ts"],
-      "@styles/*": ["core/styles/*"],
-      "@utils/*": ["core/utils/*"]
+      "@assets/*": ["Core/assets/*"],
+      "@components/*": ["Core/components/*"],
+      "@constants": ["Core/constants/index.ts"],
+      "@containers/*": ["Core/containers/*"],
+      "@interfaces/*": ["Core/interfaces/*"],
+      "@graphql/*": ["Core/graphql/*"],
+      "@hooks/*": ["Core/hooks/*"],
+      "@store": ["Core/store/index.ts"],
+      "@styles/*": ["Core/styles/*"],
+      "@utils/*": ["Core/utils/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
