--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.4.2",
+    "react-google-recaptcha-v3": "^1.9.5",
     "react-helmet": "^6.0.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-portal": "^4.2.1",
