--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-code-input": "^3.10.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.4.2",
     "react-google-recaptcha-v3": "^1.9.5",
@@ -76,6 +77,7 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-facebook-login": "^4.1.4",
     "@types/react-helmet": "^6.0.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-portal": "^4.0.2",
