--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fleetly/chat": "^0.6.3",
     "@fleetly/common": "^0.4.2",
     "@fleetly/core": "^0.7.1",
-    "@fleetly/flow": "^0.5.1",
+    "@fleetly/flow": "^0.7.0",
     "@fleetly/provider": "^0.6.0",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/emoji-mart": "^3.0.5",
@@ -61,7 +61,6 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@nestjs/common": "^7.3.1",
     "@nestjs/core": "^7.3.1",
-    "@nestjs/microservices": "^7.3.1",
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/platform-express": "^7.3.1",
     "@nestjs/testing": "^7.3.1",
@@ -100,8 +99,10 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "cache-manager": "^3.6.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "class-validator": "^0.13.1",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -124,6 +125,7 @@
     "jest-watch-typeahead": "0.4.2",
     "lint-staged": "^10.1.7",
     "mini-css-extract-plugin": "0.9.0",
+    "mongoose": "^6.0.13",
     "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
