--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fleetly/core": "^0.7.1",
     "@fleetly/flow": "^0.7.0",
     "@fleetly/provider": "^0.6.0",
+    "@floating-ui/react-dom": "^0.4.3",
     "@fortawesome/fontawesome-pro": "^5.13.0",
     "@types/emoji-mart": "^3.0.5",
     "@types/insert-text-at-cursor": "^0.3.0",
@@ -157,7 +158,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
     "tslint-react": "^5.0.0",
-    "typescript": "^3.8.3",
+    "typescript": "^4.5.5",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
