--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deep-object-diff": "^1.1.0",
     "emoji-mart": "^3.0.1",
     "final-form": "^4.20.2",
+    "final-form-arrays": "^3.0.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "insert-text-at-cursor": "^0.3.0",
@@ -38,6 +39,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-final-form": "^6.5.3",
+    "react-final-form-arrays": "^3.1.3",
     "react-flow-renderer": "^9.4.2",
     "react-google-recaptcha-v3": "^1.9.5",
     "react-helmet": "^6.0.0",
